# learning-ai

./: .gitignore  main.py  pyproject.toml
assets/hospital/: hospital_571.txt
assets/wukong/: wukong_wiki.txt  玩法.txt
gui_tkinter/: banana_survey.py  dialog.py  menu.py  optimizer_client.py
gui_tkinter/event/: message_enter.py
gui_tkinter/layout/: grid.py  pack.py
gui_tkinter/oop/: custom_widgets.py
gui_tkinter/styling/: label.py  style.py  treeview.py
gui_tkinter/tk_widgets/: button.py  checkbutton.py  optionmenu.py  radiobutton.py  spinbox.py  text.py
gui_tkinter/ttk_widgets/: button.py  checkbutton.py  combobox.py  entry.py  label.py  label_frame.py  radiobutton.py  spinbox.py  table.py  tree.py
gui_tkinter/variables/: bound_text.py  jsonvar.py  trace_add.py  variable.py
gui_tkinter/widgets/: entry.py  text.py
llm/: deepseek.py
rag/agents/: wukong.py  wukong_chains.py  wukong_langgraph.py  wukong_langgraph_loop.py  wukong_llamaIndex.py
rag/embeddings/: bge-small.py  bge_small_zh.py  similar.py  similarity.py
rag/loaders/: load_csv.py  load_hospital_web.py  load_json.py  load_pdf.py  load_text.py  load_web.py
rag/models/: deepseek.py
rag/pre_retrieval/: multi_query_retriever.py  re_phrase_query_retriever.py  rewrite_query_with_prompt.py
rag/retrievers/: bm25.py  hybrid.py  parent_document.py  re_phrase_query.py  sentence_window.py
rag/splitters/: split_by_character.py  split_by_length.py  split_by_recursive.py  split_by_semantic.py  split_by_topic.py  split_markdown.py  split_ts_code.py
rag/vector_stores/: chroma.py  chroma_add_docs.py  (+4 more)
